# yt-subs

./: .gitignore  README.md  default.nix  flake.nix  pyproject.toml  yt-subs.sh
src/yt_subs/: __init__.py  cleaning.py  cli.py  subtitles.py  summarizer.py  types.py
test/: yt-subs.bats
test/fixtures/: sample.srt  sample.vtt  yt-dlp-list-subs.txt
test/mocks/: fzf  ollama  yt-dlp
tests/: conftest.py  test_cleaning.py  test_cli.py  test_subtitles.py  test_summarizer.py
tests/features/: cli_validation.feature  language_selection.feature  subtitle_cleaning.feature  subtitle_download.feature  summarization.feature
tests/fixtures/: sample.srt  sample.vtt  yt_dlp_info.py
