[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-subs"
version = "1.0.0"
description = "Download YouTube subtitles and summarize them with Ollama"
requires-python = ">=3.11"
license = "GPL-3.0-only"
dependencies = ["yt-dlp"]

[project.scripts]
yt-subs = "yt_subs.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
